--- a/css/style.css
+++ b/css/style.css
@@ -384,7 +384,7 @@ a {
 .footer-nav__link {
   font-weight: normal;
   line-height: 0px;
-  font-size: calc(12px + 7 * (100vw - 320px) / 1600);
+  font-size: calc(14px + 7 * (100vw - 320px) / 1600);
   /* identical to box height, or 0% */
   letter-spacing: -0.204545px;
   color: #ffffff;
@@ -1260,6 +1260,7 @@ body._lock {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  gap: 15px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
